--- a/platformio.ini
+++ b/platformio.ini
@@ -12,6 +12,11 @@ env_default = nodemcuv2
 platform = espressif
 framework = arduino
 board = nodemcuv2
+lib_deps =
+  OneWire
+  PubSubClient
+  DallasTemperature
+  525
 
 [env:nodemcu]
 platform = espressif
